--- a/aplicando-bootstrap/index.html
+++ b/aplicando-bootstrap/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Minha página</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
-<body>
-$END$
-</body>
+    <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">Minha página</a>
+        <img src=""
+    </nav>
+    </body>
 </html>
