pagina feita aplicando bootstrap

--- a/aplicando-bootstrap/index.html
+++ b/aplicando-bootstrap/index.html
@@ -8,8 +8,71 @@
 </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">Minha página</a>
-        <img src=""
+        <a class="navbar-brand" href="#">
+            <img src="img/globla_labs.png" rel="gato" alt="gato" height="80" width="80">
+        </a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#quemsomos">Quem somos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#parceiros">Parceiros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#servicos">Serviços</a>
+                </li>
+            </ul>
+        </div>
     </nav>
+
+    <section id="quemsomos">
+        <div class="container-fluid text-center margin quemsomos">
+            <h3 class="margin">Quem somos</h3>
+            <img src="img/mix.jpg" width="330" height="300" alt="nossa equipe" class="rounded-circle">
+            <h3>Somos um time comprometido com resultados</h3>
+        </div>
+    </section>
+
+    <section id="parceiros">
+        <div class="container-fluid text-center margin parceiros">
+            <h3 class="margin">Parceiros</h3>
+           <div class="container">
+               <div class="row">
+                   <div class="col-lg-4 col-md-4 col-sm-4">
+                       <img alt="" src="img/logo.svg" width="100%">
+                   </div>
+                   <div class="col-lg-4 col-md-4 col-sm-4">
+                       <img alt="" src="img/logo.svg" width="100%">
+                   </div>
+                   <div class="col-lg-4 col-md-4 col-sm-4">
+                       <img alt="" src="img/logo.svg" width="100%">
+                   </div>
+               </div>
+           </div>
+        </div>
+    </section>
+
+    <section id="servicos">
+        <div class="container-fluid text-center margin servicos">
+            <h3 class="margin">Serviços</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img alt="" src="img/notebook.jpg" width="100%">
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img alt="" src="img/mobile.jpg" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="container-fluid text-center bg-footer margin">
+        <p>Desenvolvido por Alysson Luigi</p>
+    </footer>
     </body>
 </html>
