variaveis, operadores e objetos JS parte 1

--- a/IntroducaoJS/DIOjs/index.html
+++ b/IntroducaoJS/DIOjs/index.html
@@ -6,9 +6,15 @@
     <meta charset="UTF-8">
     <title>Contador</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/script.js"></script>
 </head>
 <body>
-    <h1>Hello world!!</h1>
+    <h1>Contador</h1>
+    <p>Clique nos botões</p>
+    <div id="counter">
+        <button name="subtrair" onclick="decrement()">-</button>
+        <span id="currentNumber">0</span>
+        <button name="adicionar" onclick="increment()">+</button>
+    </div>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
